--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @use 'tailwind';
 @use 'element-plus/theme-chalk/dark/css-vars.css';
 @use "element-plus";
+@use "animate.css";
 
 ::view-transition-old(root),
 ::view-transition-new(root) {
