--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,12 +1,20 @@
 :root {
   --sidebar-background: #304156;
   --sidebar-text: #bfcbd9;
+  --sidebar-logo-background: #2d3748;
 }
-
+/**
+ * 暗黑主题
+ */
 html.dark {
   --sidebar-background: var(--el-bg-color-overlay);
   --sidebar-text: #fff;
+  --sidebar-logo-background: rgb(0 0 0 / 20%);
 }
 
 $sidebar-background: var(--sidebar-background);
 $sidebar-text: var(--sidebar-text);
+$sidebar-logo-background: var(--sidebar-logo-background);
+$sidebar-width: 210px; // 侧边栏宽度
+$sidebar-width-collapsed: 54px; // 侧边栏收缩宽度
+$navbar-height: 50px; // 导航栏高度
